[project]
name = "mult-circuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circuitsvis>=1.43.3",
    "huggingface-hub[hf-xet]>=0.30.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "modal>=0.74.25",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "transformer-lens>=2.15.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
